# unimath2IMEdic

./: LICENSE  README.md  pyproject.toml
tests/: test_roman2kana.py
unimath2imedic/: __init__.py  cli.py  main.py  roman2kana.py  table_MSIME.csv
